--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -5,24 +5,23 @@
     background-color:white;
 }
 
-li, a, button{
-    font-weight: 500;
+li, a,button{
+    font-weight: 500px;
     font-size: 16px;
     color:  #24252a;
     text-decoration: none;
+
 }
-h3{
+h2{
     color: #24252a;
     margin-right: auto;
     cursor: pointer; 
 }
-
 header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 20px 10%;
-
 }
 
 .links{
@@ -47,5 +46,5 @@ button{
     transition: all 0.3s ease 0s;
 }
 button:hover{
-    background-color: rgba(10, 189, 227, 0.8);
+    background-color:rgba(10, 189, 227, 0.8);
 }
